backend: signup route
