# backend/routes/routes.go
@@ -25,17 +25,6 @@ import (
 
 // Mount the routes
 func MountRoutes(app *gin.Engine) {
-
-	// swagger:route GET /users/ user getUser
-	//
-	// Get all users
-	//
-	//     Responses:
-	//       default: GenericResponse
-	//       404:
-	//       200:     GetAllUsersResponse
-	app.GET("/users", user.ReadAll)
-
 	// swagger:route GET /users/:id user getUser
 	//
 	// Get one user
@@ -45,29 +34,14 @@ func MountRoutes(app *gin.Engine) {
 	//       200:     GetOneUserResponse
 	app.GET("/users/:id", user.ReadOne)
 
-	// swagger:route PUT /users/:id user updateUser
+	// swagger:route POST /users/signup user signup
 	//
-	// Update user
-	//
-	//     Responses:
-	//       default: GenericResponse
-	app.PUT("/users/:id", user.Update)
-
-	// swagger:route POST /users/ user createUser
-	//
-	// Create user
+	// Sign Up
 	//
 	//     Responses:
 	//       default: GenericResponse
-	app.POST("/users", user.Create)
-
-	// swagger:route DELETE /users/:id user deleteUser
-	//
-	// Delete user
-	//
-	//     Responses:
-	//       default: GenericResponse
-	app.DELETE("/users/:id", user.Delete)
+	//       200:     GenericResponse
+	app.POST("/users/signup", user.SignUp)
 
 	// swagger:route GET /categories/ category getCategory
 	//
